--- a/client/index.html
+++ b/client/index.html
@@ -15,14 +15,15 @@
   <main class="main">
     <form class="form-wrapper">
       <div class="form">
-        <label for="message">Message:</label>
-        <textarea type="text" name="message" id="message" required maxlength="150" rows="3"></textarea>
+        <label for="message-input">Message:</label>
+        <textarea type="text" name="message-input" id="message-input" required maxlength="150" rows="3"></textarea>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
       </div>
         <button class="submit-btn">Add</button>
     </form>
     <p class="loading">Loading...</p>
+    <div class="messages"></div>
   </main>
   <script src="./frontend.js"></script>
 </body>
