finished 2st version

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
     <form class="form-wrapper">
       <div class="form">
         <label for="message-input">Message:</label>
-        <textarea type="text" name="message-input" id="message-input" required maxlength="150" rows="3"></textarea>
+        <textarea type="text" name="message-input" id="message-input" required maxlength="150" rows="3" autofocus></textarea>
         <label for="name-input">Name:</label>
         <input type="text" id="name-input" name="name-input" required>
       </div>
